--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,13 @@
  @import 'bootstrap-sprockets';
  @import 'bootstrap'; 
 
+//Typography Styles
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif
 }
 
+
+//Backround Gradient
 .navbar, .home-callout {
   //Gradient provided by @_ighosh at uiGradients.com
   background: #ee9ca7; /* fallback for old browsers */
@@ -28,28 +31,22 @@ h1, h2, h3 {
   background: linear-gradient(to left, #ee9ca7 , #ffdde1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+//Nav Styles
 .navbar {
   border: none;
 }
 
-.navbar-default .navbar-brand {
-  color:white;
-}
-
+//
+.navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
   color:white;
+  &:hover {
+    color:white;
+    opacity:0.75;
+  }
 }
 
-.navbar-default .navbar-brand:hover {
-  color:white;
-  opacity:0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color:white;
-  opacity:0.75;
-}
-
+//Homepage Styles
 .home-callout {
     color:white;
     margin-top: -20px;
