--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,10 @@
  *= require_self
  */
  
- @import 'bootstrap-sprockets';
- @import 'bootstrap'; 
+@import 'bootstrap-sprockets';
+@import 'bootstrap'; 
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 //Typography Styles
 h1, h2, h3 {
