--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,10 +27,13 @@ h1, h2, h3 {
 
 //Backround Gradient
 .navbar, .home-callout {
-  //Gradient provided by @_ighosh at uiGradients.com
-  background: #ee9ca7; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #ee9ca7 , #ffdde1); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #ee9ca7 , #ffdde1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#96c56f+0,a9db80+100 */
+background: #96c56f; /* Old browsers */
+background: -moz-linear-gradient(left,  #96c56f 0%, #a9db80 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #96c56f 0%,#a9db80 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #96c56f 0%,#a9db80 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96c56f', endColorstr='#a9db80',GradientType=1 ); /* IE6-9 */
+
 }
 
 //Nav Styles
